# sunshine

./: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt.user.22
app/: CMakeLists.txt  sessions_analyzer.ui
app/inc/: analyzer_table_cells_enum.h  data_base_handler.h  measurements_data.h  qt_chart_wrapper.h  rasp0_sensor_data.h  rasp3b_sensor_data.h  serializator.h  sessions_analyzer.h  sunshinedesktop.h
app/src/: data_base_handler.cpp  main.cpp  measurements_data.cpp  qt_chart_wrapper.cpp  rasp0_sensor_data.cpp  rasp3b_sensor_data.cpp  serializator.cpp  sessions_analyzer.cpp  sessions_analyzer.ui  sunshinedesktop.cpp  sunshinedesktop.ui
mqtt/: CMakeLists.txt
mqtt/inc/: mqtt_conf_data.h  mqtt_wrapper.h
mqtt/src/: mqtt_wrapper.cpp
prog/app/: CMakeLists.txt
prog/app/src/: main.cpp
prog/mqtt/: CMakeLists.txt
prog/mqtt/inc/: mqtt_wrapper.h
serialized_sessions/: test  w3rw3r
